# learn-opengl

./: .gitmodules  .lvimrc  CMakeLists.txt  README.md
include/glad/: glad.h
res/: container2_specular_wood.png~
res/nanosuit/: nanosuit.mtl
res/pbr/grass/: sphere_grass.mtl
res/sponza/: sponza.mtl
res/sponza_gltf/: sponza.gltf
src/: gl_util.h  glad.c  instance.cpp  lamp.vert  main.cpp  main.frag  main.vert  model.h  pbr.cpp  post.frag  post.vert  shader.h  suit.vert  test.cpp  texture.h  util.h  vertices.h
src/lit_boxes/: glad.c  main.cpp  main.frag  main.vert  model.h  shader.h  texture.h  util.h
src/shaders/: blend.frag  blur.frag  blur.vert  depth.frag  depth.vert  depth_cube.frag  depth_cube.geom  depth_cube.vert  explode.frag  explode.geom  explode.vert  g_pass.frag  g_pass.vert  instance.vert  lamp.frag  lamp.vert  lit_pass.frag  main.frag  main.vert  normals.geom  normals.vert  pbr.frag  pbr.vert  post.frag  pre_post.frag  reflect.frag  reflect.vert  sky.frag  sky.vert  ssao.frag  test.frag  view_deb.frag  view_deb.vert
src/shaders/pbr/: conv.frag  equi.frag  equi.vert  int_brdf.frag  int_brdf.vert  pbr.frag  pbr.vert  sky.frag  spec_conv.frag
src/smiling_boxes/: main.cpp  main.frag  main.vert  shader.h  texture.h
